--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "scripts": {
     "start": "webpack-dev-server --port 3000 --compress --mode development",
     "build": "webpack --mode production",
+    "storybook": "start-storybook",
     "lint": "eslint ./src/**/* --ext .ts"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@storybook/addon-info": "^5.3.19",
+    "@storybook/react": "^5.3.19",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.0.1",
@@ -25,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "html-webpack-plugin": "^4.3.0",
+    "react-docgen-typescript-loader": "^3.7.2",
     "source-map-loader": "^1.0.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
