--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,5 +25,8 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/recommended"
-  ]
+  ],
+  "rules" {
+    "react/prop-types": 0
+  }
 }
