--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "source-map-loader": "^1.0.0",
