--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
     "start": "webpack-dev-server --port 3000 --compress --mode development",
     "build": "webpack --mode production",
     "storybook": "start-storybook",
-    "lint": "eslint ./src/**/* --ext .ts"
+    "lint": "eslint ./src/**/* --ext .ts",
+    "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
     "@storybook/addon-info": "^5.3.19",
     "@storybook/react": "^6.0.10",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^26.0.10",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/styled-components": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^3.0.1",
     "@typescript-eslint/parser": "^3.0.1",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^7.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -32,11 +35,14 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.1",
+    "jest-styled-components": "^7.0.3",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-test-renderer": "^16.13.1",
     "source-map-loader": "^1.0.0",
+    "ts-jest": "^26.2.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
+    "typescript-plugin-styled-components": "^1.4.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
